// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Token Generate Panel should be able to generate a new token 1`] = `
<TokenGeneratePanel>
  <defaultProps(ModalHeader)
    classPrefix="rs-modal-header"
    closeButton={true}
  >
    <ModalHeader
      classPrefix="rs-modal-header"
      closeButton={true}
    >
      <div
        className="rs-modal-header"
      >
        <button
          aria-label="Close"
          className="rs-modal-header-close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <defaultProps(ModalTitle)
          classPrefix="rs-modal-title"
        >
          <ModalTitle
            classPrefix="rs-modal-title"
          >
            <h4
              className="rs-modal-title"
            >
              tokenList.panels.generateToken
            </h4>
          </ModalTitle>
        </defaultProps(ModalTitle)>
      </div>
    </ModalHeader>
  </defaultProps(ModalHeader)>
  <defaultProps(ModalBody)
    classPrefix="rs-modal-body"
  >
    <ModalBody
      classPrefix="rs-modal-body"
    >
      <div
        className="rs-modal-body"
        style={Object {}}
      >
        <p>
          tokenList.panels.creationSuccess
        </p>
        <defaultProps(Panel)
          bordered={true}
          classPrefix="rs-panel"
        >
          <Panel
            bordered={true}
            classPrefix="rs-panel"
          >
            <div
              className="rs-panel rs-panel-default rs-panel-bordered"
            >
              <div
                className="rs-panel-body"
              >
                iXBGZLn7L5bAg455FQiCrd7RUQJtgWZ5
              </div>
            </div>
          </Panel>
        </defaultProps(Panel)>
      </div>
    </ModalBody>
  </defaultProps(ModalBody)>
  <defaultProps(ModalFooter)
    classPrefix="rs-modal-footer"
  >
    <ModalFooter
      classPrefix="rs-modal-footer"
    >
      <div
        className="rs-modal-footer"
      >
        <withStyleProps(defaultProps(Button))
          appearance="subtle"
          classPrefix="rs-btn"
          componentClass="button"
          onClick={[Function]}
          ripple={true}
        >
          <defaultProps(Button)
            appearance="subtle"
            className=""
            classPrefix="rs-btn"
            componentClass="button"
            onClick={[Function]}
            ripple={true}
          >
            <Button
              appearance="subtle"
              className=""
              classPrefix="rs-btn"
              componentClass="button"
              onClick={[Function]}
              ripple={true}
            >
              <button
                className="rs-btn rs-btn-subtle"
                onClick={[Function]}
                type="button"
              >
                tokenList.panels.close
                <defaultProps(Ripple)
                  classPrefix="rs-ripple"
                >
                  <Ripple
                    classPrefix="rs-ripple"
                  >
                    <span
                      className="rs-ripple-pond"
                    >
                      <Transition
                        enteringClassName="rs-ripple-rippling"
                        in={false}
                        onEntered={[Function]}
                        timeout={1000}
                      >
                        <span
                          className="rs-ripple"
                          style={Object {}}
                        />
                      </Transition>
                    </span>
                  </Ripple>
                </defaultProps(Ripple)>
              </button>
            </Button>
          </defaultProps(Button)>
        </withStyleProps(defaultProps(Button))>
      </div>
    </ModalFooter>
  </defaultProps(ModalFooter)>
</TokenGeneratePanel>
`;

exports[`Token Generate Panel should render 1`] = `
<TokenGeneratePanel>
  <defaultProps(ModalHeader)
    classPrefix="rs-modal-header"
    closeButton={true}
  >
    <ModalHeader
      classPrefix="rs-modal-header"
      closeButton={true}
    >
      <div
        className="rs-modal-header"
      >
        <button
          aria-label="Close"
          className="rs-modal-header-close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <defaultProps(ModalTitle)
          classPrefix="rs-modal-title"
        >
          <ModalTitle
            classPrefix="rs-modal-title"
          >
            <h4
              className="rs-modal-title"
            >
              tokenList.panels.generateToken
            </h4>
          </ModalTitle>
        </defaultProps(ModalTitle)>
      </div>
    </ModalHeader>
  </defaultProps(ModalHeader)>
  <defaultProps(ModalBody)
    classPrefix="rs-modal-body"
  >
    <ModalBody
      classPrefix="rs-modal-body"
    >
      <div
        className="rs-modal-body"
        style={Object {}}
      >
        <withStyleProps(defaultProps(Input))
          classPrefix="rs-input"
          componentClass="input"
          disabled={false}
          onChange={[Function]}
          placeholder="tokenList.panels.name"
          type="text"
          value=""
        >
          <defaultProps(Input)
            className=""
            classPrefix="rs-input"
            componentClass="input"
            disabled={false}
            onChange={[Function]}
            placeholder="tokenList.panels.name"
            type="text"
            value=""
          >
            <Input
              className=""
              classPrefix="rs-input"
              componentClass="input"
              disabled={false}
              onChange={[Function]}
              placeholder="tokenList.panels.name"
              type="text"
              value=""
            >
              <input
                className="rs-input"
                disabled={false}
                id={null}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="tokenList.panels.name"
                type="text"
                value=""
              />
            </Input>
          </defaultProps(Input)>
        </withStyleProps(defaultProps(Input))>
      </div>
    </ModalBody>
  </defaultProps(ModalBody)>
  <defaultProps(ModalFooter)
    classPrefix="rs-modal-footer"
  >
    <ModalFooter
      classPrefix="rs-modal-footer"
    >
      <div
        className="rs-modal-footer"
      >
        <withStyleProps(defaultProps(Button))
          appearance="primary"
          classPrefix="rs-btn"
          componentClass="button"
          disabled={false}
          onClick={[Function]}
          ripple={true}
        >
          <defaultProps(Button)
            appearance="primary"
            className=""
            classPrefix="rs-btn"
            componentClass="button"
            disabled={false}
            onClick={[Function]}
            ripple={true}
          >
            <Button
              appearance="primary"
              className=""
              classPrefix="rs-btn"
              componentClass="button"
              disabled={false}
              onClick={[Function]}
              ripple={true}
            >
              <button
                className="rs-btn rs-btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                tokenList.panels.generate
                <defaultProps(Ripple)
                  classPrefix="rs-ripple"
                >
                  <Ripple
                    classPrefix="rs-ripple"
                  >
                    <span
                      className="rs-ripple-pond"
                    >
                      <Transition
                        enteringClassName="rs-ripple-rippling"
                        in={false}
                        onEntered={[Function]}
                        timeout={1000}
                      >
                        <span
                          className="rs-ripple"
                          style={Object {}}
                        />
                      </Transition>
                    </span>
                  </Ripple>
                </defaultProps(Ripple)>
              </button>
            </Button>
          </defaultProps(Button)>
        </withStyleProps(defaultProps(Button))>
        <withStyleProps(defaultProps(Button))
          appearance="subtle"
          classPrefix="rs-btn"
          componentClass="button"
          onClick={[Function]}
          ripple={true}
        >
          <defaultProps(Button)
            appearance="subtle"
            className=""
            classPrefix="rs-btn"
            componentClass="button"
            onClick={[Function]}
            ripple={true}
          >
            <Button
              appearance="subtle"
              className=""
              classPrefix="rs-btn"
              componentClass="button"
              onClick={[Function]}
              ripple={true}
            >
              <button
                className="rs-btn rs-btn-subtle"
                onClick={[Function]}
                type="button"
              >
                tokenList.panels.close
                <defaultProps(Ripple)
                  classPrefix="rs-ripple"
                >
                  <Ripple
                    classPrefix="rs-ripple"
                  >
                    <span
                      className="rs-ripple-pond"
                    >
                      <Transition
                        enteringClassName="rs-ripple-rippling"
                        in={false}
                        onEntered={[Function]}
                        timeout={1000}
                      >
                        <span
                          className="rs-ripple"
                          style={Object {}}
                        />
                      </Transition>
                    </span>
                  </Ripple>
                </defaultProps(Ripple)>
              </button>
            </Button>
          </defaultProps(Button)>
        </withStyleProps(defaultProps(Button))>
      </div>
    </ModalFooter>
  </defaultProps(ModalFooter)>
</TokenGeneratePanel>
`;
